@startuml
'https://plantuml.com/class-diagram

abstract class Middleware<T>{
- Middleware<T> middleware


+ Middleware<T> linkWith(Middleware<T> next)
+ {abstract} String handle(String field, T businessWrapper)
# String handleNext(String field, T businessWrapper)

}

class  ReplaceAccountNumberMiddleware {
+ String handle(String field, IBANWrapper businessWrapper)
}


class  BankCodeMiddleware {
+ String handle(String field, IBANWrapper businessWrapper)
}

class  IBANCheckSumMiddleware {
+ String handle(String field, IBANWrapper businessWrapper)
}

class  FormatIBANMIddleware {
+ String handle(String field, IBANWrapper businessWrapper)
}

Middleware <|-- ReplaceAccountNumberMiddleware : "<<bind>> <IBANWrapper>"
Middleware <|-- BankCodeMiddleware : "<<bind>> <IBANWrapper>"
Middleware <|-- IBANCheckSumMiddleware : "<<bind>> <IBANWrapper>"
Middleware <|-- FormatIBANMIddleware : "<<bind>> <IBANWrapper>"




@enduml